<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_photo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:civ_border_width="2dp"
        app:civ_border_color="@android:color/holo_green_dark"
        app:layout_constraintBottom_toBottomOf="@id/btn_add_photo"
        app:layout_constraintEnd_toEndOf="@id/btn_add_photo"
        app:layout_constraintStart_toStartOf="@id/btn_add_photo"
        app:layout_constraintTop_toTopOf="@id/btn_add_photo" />

    <Button
        android:id="@+id/btn_add_photo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/bg_circle"
        android:text="@string/add_photo"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edit_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:background="@android:color/white"
        android:minHeight="56dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:hint="@string/name"
        android:textColor="@color/black"
        android:inputType="textPersonName"
        app:layout_constraintTop_toBottomOf="@id/btn_add_photo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/edit_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@android:color/white"
        android:minHeight="56dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:hint="@string/email"
        android:textColor="@color/black"
        android:inputType="textEmailAddress"
        app:layout_constraintTop_toBottomOf="@id/edit_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/edit_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="@android:color/white"
        android:minHeight="56dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:hint="@string/senha"
        android:textColor="@color/black"
        android:inputType="textPassword"
        app:layout_constraintTop_toBottomOf="@id/edit_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroupTipo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/edit_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <RadioButton
            android:id="@+id/radioCliente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Cliente"
            android:checked="true" />

        <RadioButton
            android:id="@+id/radioOperador"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Operador" />
    </RadioGroup>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:text="@string/cadastrar"
        android:textColor="@android:color/white"
        app:backgroundTint="?attr/colorPrimary"
        app:layout_constraintTop_toBottomOf="@id/radioGroupTipo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>